--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
             <version>1.1.1</version>
         </dependency>
         <dependency>
+            <groupId>cz.jirutka.unidecode</groupId>
+            <artifactId>unidecode</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.cedarsoftware</groupId>
             <artifactId>json-io</artifactId>
             <version>4.12.0</version>
